[BE] refactor and adding unit tests